--- a/适配介绍.md
+++ b/适配介绍.md
@@ -35,6 +35,6 @@
 
 ##  DAPP通过上述两点改动适配到imApp后不会改变原来流程，只是在scatter identify接口中增加了watchword参数，以下是DAPP 与 imApp部分交付时序图.
 
-<img src="imapp1.png" width=800 height=400 />  
+<img src="https://github.com/imApp-Core/imApp/blob/master/src/imapp1.png" width=800 height=400 />  
 
-<img src="imapp2.png" width=600 height=200 />
+<img src="https://github.com/imApp-Core/imApp/blob/master/src/imapp2.png" width=600 height=200 />
