--- a/适配介绍.md
+++ b/适配介绍.md
@@ -2,10 +2,12 @@
 
 ## 所有支持scatter web插件钱包的DAPP可以通过以下两点改动适配到imApp钱包.
 
-#### （1）在identify接口中新增口令参数watchword。DAPP在identify的result中取出watchword， 如下DAPP获取授权结果代码:      
+#### （1）在identify接口中新增口令参数watchword。DAPP在identify的result中取出watchword， 如下DAPP获取授权结果代码:
+```javascript
     let result = await ScatterJS.scatter.getIdentity({accounts:[this.network]})      
     this.currentAccount = result.accounts[0];  
     this.watchword = result.accounts[0]['watchword'];  //imApp新增的参数，DAPP保存watchword
+```
 
 #### （2）DAPP发起的交易（EOS和所有代币的交易）时，需要把在scatter.getIdentity接口中获取的口令填入到交易memo中.
     例如imApp通过Scatter-JS identify接口传递给DAPP的口令是：  [imapp2832F2B86F]
